M2: never block on I/O while holding a monitor — a virtual-thread pinning bug CI found
RobotsGate fetched robots.txt inside ConcurrentHashMap.computeIfAbsent, whose mapping
function runs under a monitor on the map's bin. A virtual thread that blocks while
holding a monitor pins its carrier, and the scheduler has one carrier per core. On a
two-core CI runner, two workers pinned on their robots fetch held both carriers; the
fixture server's handlers could never run to answer them; the deadlock broke only at
the HTTP timeout, after which the workers failed closed and skipped their pages. In
production the same shape means a worker with --concurrency >= cores starving its own
heartbeat at startup. Worker.contextFor (synchronized around the seed upserts) had the
same hazard.

Both now guard the blocking section with a ReentrantLock: a waiter on a j.u.c lock
unmounts, a waiter on a monitor pins. One lock for the whole robots gate keeps it to one
fetch per origin per process. The fixture server answers on platform threads, so test
infrastructure never competes with the code under test for carriers.

Reproduced and verified with a single-carrier scheduler
(SHELF_TEST_JVM_ARGS="-Djdk.virtualThreadScheduler.parallelism=1"): the suite hung
before, and passes in full after. The build keeps that knob. The shared-ceiling test
also says so explicitly if robots.txt refused a page, and the heartbeat test reads its
task row once rather than twice around a state change.